--- a/.github/workflows/delte-action.yaml
+++ b/.github/workflows/delte-action.yaml
@@ -32,7 +32,7 @@ jobs:
           rm -rf .github
       - name: Commits
         run: |
-          git config --local user.email "absinthe4902@naver.com"
+          git config --local user.email "absinthe4902@gmail.com"
           git config --local user.name "AUTO_COMMIT_GIT_ACTION"
           git pull
           git add .
