--- a/.github/workflows/schedule-update.yaml
+++ b/.github/workflows/schedule-update.yaml
@@ -39,7 +39,7 @@ jobs:
           WEBSHARE_TOKEN: ${{ secrets.WEBSHARE_TOKEN }}
       - name: Commits
         run: |
-          git config --local user.email "absinthe4902@naver.com"
+          git config --local user.email "absinthe4902@gmail.com"
           git config --local user.name "AUTO_COMMIT_GIT_ACTION"
           git pull
           git add .
