--- a/.github/workflows/delte-action.yaml
+++ b/.github/workflows/delte-action.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Commits
         run: |
           git config --local user.email "absinthe4902@gmail.com"
-          git config --local user.name "AUTO_COMMIT_GIT_ACTION"
+          git config --local user.name "leelee-technical"
           git pull
           git add .
           git commit -m "AUTO DELETE: Delete github action on 2024/09/10 UTC"
