--- a/.github/workflows/schedule-update.yaml
+++ b/.github/workflows/schedule-update.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Commits
         run: |
           git config --local user.email "absinthe4902@gmail.com"
-          git config --local user.name "AUTO_COMMIT_GIT_ACTION"
+          git config --local user.name "leelee-technical"
           git pull
           git add .
           git commit -m "AUTO COMMIT: commit from schedule update action."
